--- a/src/Persistence/project.json
+++ b/src/Persistence/project.json
@@ -2,6 +2,8 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Common": "1.0.0-*",
+    "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
     "NETStandard.Library": "1.6.1"
   },
 
