--- a/src/Persistence/project.json
+++ b/src/Persistence/project.json
@@ -3,7 +3,11 @@
 
   "dependencies": {
     "Common": "1.0.0-*",
+    "Domain": "1.0.0-*",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
+    "Microsoft.Extensions.Configuration": "1.1.0",
+    "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
     "NETStandard.Library": "1.6.1"
   },
 
