--- a/src/Application/project.json
+++ b/src/Application/project.json
@@ -2,7 +2,9 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.1"
+    "Common": "1.0.0-*",
+    "NETStandard.Library": "1.6.1",
+    "Persistence": "1.0.0-*"
   },
 
   "frameworks": {
