--- a/src/FuelTracker/project.json
+++ b/src/FuelTracker/project.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "Application": "1.0.0-*",
+    "Infrastructure": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
