--- a/src/Infrastructure/project.json
+++ b/src/Infrastructure/project.json
@@ -2,7 +2,11 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.1"
+    "Common": "1.0.0-*",
+    "Microsoft.Extensions.DependencyInjection": "1.1.0",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0",
+    "NETStandard.Library": "1.6.1",
+    "System.ComponentModel": "4.3.0"
   },
 
   "frameworks": {
