--- a/src/Persistence/project.json
+++ b/src/Persistence/project.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "Common": "1.0.0-*",
     "Domain": "1.0.0-*",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
     "Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
     "Microsoft.Extensions.Configuration": "1.1.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.1.0",
