Viewmodels + config updates

--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationStateDatabase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "QueriesDataase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
