--- a/src/FuelTracker/project.json
+++ b/src/FuelTracker/project.json
@@ -4,6 +4,7 @@
     "Infrastructure": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.1",
+    "Microsoft.AspNetCore.Mvc.WebApiCompatShim": "1.0.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0",
