--- a/src/FuelTracker/project.json
+++ b/src/FuelTracker/project.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "Commands": "1.0.0-*",
     "Common": "1.0.0-*",
+    "Dapper": "1.50.2",
+    "Domain": "1.0.0-*",
     "Infrastructure": "1.0.0-*",
     "Microsoft.AspNetCore.Diagnostics": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.1",
-    "Microsoft.AspNetCore.Mvc.WebApiCompatShim": "1.0.1",
+    "Microsoft.AspNetCore.Mvc.WebApiCompatShim": "1.1.1",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
     "Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
     "Microsoft.EntityFrameworkCore": "1.1.0",
@@ -21,7 +23,9 @@
       "type": "platform"
     },
     "Persistence": "1.0.0-*",
-    "Queries": "1.0.0-*"  },
+    "Queries": "1.0.0-*",
+    "Swashbuckle": "6.0.0-beta902"
+  },
 
   "tools": {
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.1.0-preview4-final"
