--- a/src/Infrastructure/project.json
+++ b/src/Infrastructure/project.json
@@ -6,7 +6,8 @@
     "Microsoft.Extensions.DependencyInjection": "1.1.0",
     "Microsoft.Extensions.DependencyInjection.Abstractions": "1.1.0",
     "NETStandard.Library": "1.6.1",
-    "System.ComponentModel": "4.3.0"
+    "System.ComponentModel": "4.3.0",
+    "System.Reflection.TypeExtensions": "4.3.0"
   },
 
   "frameworks": {
