--- a/src/Common/project.json
+++ b/src/Common/project.json
@@ -2,7 +2,9 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.1"
+    "NETStandard.Library": "1.6.1",
+    "System.ComponentModel.Primitives": "4.3.0",
+    "System.Reflection.TypeExtensions": "4.3.0"
   },
 
   "frameworks": {
