--- a/src/Queries/project.json
+++ b/src/Queries/project.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "Common": "1.0.0-*",
     "Dapper": "1.50.2",
+    "Domain": "1.0.0-*",
     "NETStandard.Library": "1.6.1"
   },
 
