Manufacturer and models controllers API endpoints change and refactor (including models, commands, queries)

--- a/src/Queries/Queries.csproj
+++ b/src/Queries/Queries.csproj
@@ -12,7 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CustomExceptions\CustomExceptions.csproj" />
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
