Fixes warnings from SonarQube analysis

--- a/.axoCover/settings.json
+++ b/.axoCover/settings.json
@@ -6,10 +6,10 @@
   "IsRedirectingFrameworkAssemblies": true,
   "TestSettings": "",
   "ExcludeAttributes": "System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute",
-  "ExcludeFiles": "*Test*",
+  "ExcludeFiles": "",
   "ExcludeDirectories": "",
   "Filters": "+[*]*",
-  "IsIncludingSolutionAssemblies": false,
+  "IsIncludingSolutionAssemblies": true,
   "IsExcludingTestAssemblies": false,
   "IsCoveringByTest": true,
   "IsMergingByHash": true,
