--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
     "ApplicationStateDatabase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "QueriesDataase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "QueriesDatabase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
