change sql server to sqlite
code fixes

--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "ApplicationStateDatabase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "QueriesDatabase": "Server=.;Database=FuelTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApplicationStateDatabase": "Data Source=fueltracker.db",
+    "QueriesDatabase": "Data Source=fueltracker.db"
   }
 }
