User management logic

--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -2,5 +2,9 @@
   "ConnectionStrings": {
     "ApplicationStateDatabase": "Data Source=fueltracker.db",
     "QueriesDatabase": "Data Source=fueltracker.db"
+  },
+  "Jwt": {
+    "Key": "veryVerySecretKey",
+    "Issuer": "http://localhost:50000/"
   }
 }
