--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -6,5 +6,9 @@
   "Jwt": {
     "Key": "veryVerySecretKey",
     "Issuer": "http://localhost:50000/"
+  },
+  "EmailService": {
+    "Address": "fueltrackerapi@gmail.com",
+    "Password":  "mwy649gac"
   }
 }
