--- a/src/FuelTracker/appsettings.json
+++ b/src/FuelTracker/appsettings.json
@@ -1,14 +1,17 @@
-﻿{
+{
   "ConnectionStrings": {
     "ApplicationStateDatabase": "Data Source=fueltracker.db",
     "QueriesDatabase": "Data Source=fueltracker.db"
   },
   "Jwt": {
     "Key": "veryVerySecretKey",
-    "Issuer": "http://localhost:50000/"
+    "Issuer": "https://fueltracker20180921072351.azurewebsites.net"
   },
   "EmailService": {
     "Address": "fueltrackerapi@gmail.com",
-    "Password":  "mwy649gac"
+    "Password": "mwy649gac"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "8ff77774-f906-4157-8deb-04a99a79193e"
   }
 }
