--- a/src/FuelTracker/FuelTracker.csproj
+++ b/src/FuelTracker/FuelTracker.csproj
@@ -9,6 +9,8 @@
     <AssetTargetFallback>$(AssetTargetFallback);dotnet5.6;portable-net45+win8</AssetTargetFallback>
     <UserSecretsId>7844aaa5-e2f2-486e-a760-d03e7fd2c566</UserSecretsId>
     <StartupObject></StartupObject>
+    <ApplicationInsightsResourceId>/subscriptions/b2a97025-5330-44b8-9037-a7ac1b0ad2fa/resourcegroups/FuelTracker20180612062341ResourceGroup/providers/microsoft.insights/components/FuelTracker20180920101216</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/b2a97025-5330-44b8-9037-a7ac1b0ad2fa/resourcegroups/FuelTracker20180612062341ResourceGroup/providers/microsoft.insights/components/FuelTracker20180920101216</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
@@ -41,6 +44,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.1.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.1.1" />
     <PackageReference Include="Swashbuckle" Version="6.0.0-beta902" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
 </Project>
